
    OpenSSL v1.1.* isn't supported yet
    Setting !maxupdn to 0 for upload/download leads to problems -> generating gillions of queued tasks
    Enable try to complete is unstable at the moment. It's recommended to set enable_try_to_complete=0

--=============================( SLFTP v1.5.6 )===================================-
    {#} Fixed !routelock so it doesn't remove normal route when removing lock
    {+} News System to store important messages to encrypted file. (#173)                                       --- cmd named !news or rename to something else??
    {+} New !affils command.
    {+} !status and !uptime shows if you use 32/64-bit version of slftp.
    {+} !lastlog command to show last log entries.
    {^} Requests can be filled from sites without checking the routes. (#168)
    {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
    {^} [MKDIR Denied] msg shows path with denied releasename.
    {^} !autoinvite warns you if no IRCNick is specified for the site.
    {^} !maxupperrip can show actual value now.
    {^} !findaffil has improved irc output.
    {^} backup on startup will only be executed after sites.dat has been successfully decrypted. (#169)
    {^} !leechers code improved.
    {-} foo bar

--=============================( SLFTP v1.5.5 )===================================-
  ** NOTE: FROM NOW ON YOU HAVE TO USE THE MAKEFILE ON LINUX AND THE MAKE.BAT ON WINDOWS **

    {+} FastMM4 memory manager (https://github.com/pleriche/FastMM4)
    {+} Partial use of Faster Regex Engine FLRE (https://github.com/BeRo1985/flre) (much faster!!!)
    {+} New dirlist Code including:
        - Changed filesize variables to use Int64 instead of Integer
        - flag to enable/disable racing incomplete files (at least with glftpd for now) (see !skipinc) (#16)
        - Reworked the file sorting with more options
        - Reworked/optimized dirlist sorting